--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-modal": "^3.15.1",
     "react-timer-hook": "^3.0.5"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/node": "17.0.38",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
+    "@types/react-modal": "^3.13.1",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.2"
