--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.9.3",
+    "@emotion/css": "^11.9.0",
+    "@emotion/server": "^11.4.0",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "@mui/styles": "^5.8.0",
+    "emotion": "^11.0.0",
     "kth-type": "^1.0.1",
     "next": "12.1.6",
     "react": "18.1.0",
