--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "18.1.0",
     "react-modal": "^3.15.1",
     "react-timer-hook": "^3.0.5",
+    "reshake": "^1.2.4",
+    "styled-components": "^5.3.5",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
