--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "kth-type": "^1.0.4",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-confetti-cannon": "^0.10.1",
     "react-dom": "18.1.0",
     "react-modal": "^3.15.1",
     "react-timer-hook": "^3.0.5",
