--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.11.3",
     "kth-type": "^1.0.4",
     "next": "12.1.6",
+    "nprogress": "^0.2.0",
     "react": "18.1.0",
     "react-confetti-cannon": "^0.10.1",
     "react-dom": "18.1.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@mui/types": "^7.1.3",
     "@types/node": "17.0.38",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
     "@types/react-modal": "^3.13.1",
