--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
     "@types/react-modal": "^3.13.1",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.2"
