--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@mui/types": "^7.1.3",
+    "@types/lodash": "^4.14.182",
     "@types/node": "17.0.38",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.10",
