--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.11.3",
     "@types/ramda": "^0.28.15",
     "kth-type": "^1.0.5",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "nprogress": "^0.2.0",
     "ramda": "^0.28.0",
