--- a/package.json
+++ b/package.json
@@ -23,7 +23,19 @@
     "react-timer-hook": "^3.0.5",
     "reshake": "^1.2.4",
     "styled-components": "^5.3.5",
-    "websocket": "^1.0.34"
+    "websocket": "^1.0.34",
+    "@mui/types": "^7.1.3",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "17.0.38",
+    "@types/nprogress": "^0.2.0",
+    "@types/ramda": "^0.28.15",
+    "@types/react": "18.0.10",
+    "@types/react-dom": "18.0.5",
+    "@types/react-modal": "^3.13.1",
+    "@types/styled-components": "^5.1.25",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.7.2"
   },
   "devDependencies": {
     "@mui/types": "^7.1.3",
