--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/types": "^7.1.3",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "17.0.38",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "18.0.10",
+    "@types/react-dom": "18.0.5",
+    "@types/react-modal": "^3.13.1",
+    "@types/styled-components": "^5.1.25",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
     "kth-type": "^1.0.5",
     "lodash": "^4.17.21",
     "next": "12.1.6",
@@ -23,19 +33,8 @@
     "react-timer-hook": "^3.0.5",
     "reshake": "^1.2.4",
     "styled-components": "^5.3.5",
-    "websocket": "^1.0.34",
-    "@mui/types": "^7.1.3",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "17.0.38",
-    "@types/nprogress": "^0.2.0",
-    "@types/ramda": "^0.28.15",
-    "@types/react": "18.0.10",
-    "@types/react-dom": "18.0.5",
-    "@types/react-modal": "^3.13.1",
-    "@types/styled-components": "^5.1.25",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.7.2"
+    "typescript": "4.7.2",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@mui/types": "^7.1.3",
