--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "17.0.38",
     "@types/nprogress": "^0.2.0",
-    "@types/ramda": "^0.28.15",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
     "@types/react-modal": "^3.13.1",
@@ -36,5 +35,8 @@
     "styled-components": "^5.3.5",
     "typescript": "4.7.2",
     "websocket": "^1.0.34"
+  },
+  "devDependencies": {
+    "@types/ramda": "^0.28.15"
   }
 }
