--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-modal": "^3.15.1",
     "react-timer-hook": "^3.0.5",
     "reshake": "^1.2.4",
+    "serve": "^14.0.1",
     "styled-components": "^5.3.5",
     "typescript": "4.7.2",
     "websocket": "^1.0.34"
