--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/web-pubsub": "^1.0.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "eslint": "8.16.0",
@@ -30,11 +31,11 @@
     "websocket": "^1.0.34"
   },
   "devDependencies": {
-    "@types/ramda": "^0.28.15",
     "@mui/types": "^7.1.3",
     "@types/lodash": "^4.14.182",
     "@types/node": "17.0.38",
     "@types/nprogress": "^0.2.0",
+    "@types/ramda": "^0.28.15",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
     "@types/react-modal": "^3.13.1",
