--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@azure/web-pubsub": "^1.0.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@types/axios": "^0.14.0",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "kth-type": "^1.0.5",
