--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "serve": "^14.0.1",
     "styled-components": "^5.3.5",
     "typescript": "4.7.2",
+    "uuidv4": "^6.2.13",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
     "@types/react-modal": "^3.13.1",
-    "@types/styled-components": "^5.1.25"
+    "@types/styled-components": "^5.1.25",
+    "@types/uuidv4": "^5.0.0"
   }
 }
